# coeder

./: .gitignore  LICENSE  README.md  build.ninja  build.sh  install.sh  meson.build  run.sh  uninstall.sh
.github/workflows/: cmake.yml  meson.yml
glade/: coeder.glade  window_main.glade
src/: eventhandler.c  file.c  main.c
src/include/: eventhandler.h  file.h  gui.h  main.h
